@@ -85,6 +85,8 @@
     <a href="success.html">Hello</a>
     <a href="success.html">Hello</a>
     
+    <h3>Alerts</h3>
+    <input id=alert_button type=button onclick="alert('I am an alert')" value=Alert>
   </body>
 </html>
 
