@@ -17,3 +17,13 @@ Then /^I should be able to wait for a block to return true$/ do
     @page.text.include? 'Success'
   end
 end
+
+When /^I handle the alert$/ do
+  @msg = @page.alert do
+    @page.alert_button
+  end
+end
+
+Then /^I should be able to get the alert's message$/ do
+  @msg.should == "I am an alert"
+end
